--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,15 @@ body {
   color: #000000;
   background-color: #fff;
 }
+#all{
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+    flex-wrap: nowrap;
+    flex-direction: row-reverse;
+   transform: translate(-0%,900%);
+}
 #cc{
   transform: translate(100%,-80%);
 }
@@ -34,50 +43,6 @@ model-viewer {
   width: 100%;
   height: 500px;
   --poster-color: #ffffff00;
-}
-.attributiontwo {
-height: 60px;
-}
-
-.attribution1 {
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  
-  align-content: center;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  
-}
-
-.attribution {
-  color: #000000;
- 
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin: 0em;
-  align-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  
-}
-
-.attribution h1 {
-  margin: 0 0 0.25em;
-  color: #000000;
-}
-
-.attribution img {
-  
-  height: 1em;
- 
-}
-
-.attribution .cc {
-  flex-shrink: .01;
-  text-decoration: none;
-  color: #000000;
 }
 
 
@@ -229,34 +194,14 @@ input:checked+.slider:before {
 
 button {
   border: 1px outset #ffffff00;
-  
-  
   border-radius: 6px;
   font-weight: 600;
   position: sticky;
   top: 100%;
-  transform: translateX(-20%);
+  transform: translate(-20%);
 }
-button3 {
-  border: 1px outset #ffffff00;
- 
-  
-  border-radius: 6px;
-  font-weight: 600;
-  position: sticky;
-  top: 100%;
-  transform: translateX(-50%);
-}
-button1 {
-  border: 1px outset #ffffff00;
-  
- 
-  border-radius: 6px;
-  font-weight: 600;
-  position: sticky;
-  top: 100%;
-  transform: translateX(-180%);
-}
+
+
 button4 {
   border: 1px outset #ffffff00;
  
@@ -267,16 +212,7 @@ button4 {
   top: 100%;
   transform: translateX(-50%);
 }
-button2 {
-  border: 1px outset #ffffff00;
-  background-color: #fff0;
-  
-  border-radius: 6px;
-  font-weight: 600;
-  position: sticky;
-  top: 100%;
-  transform: translateX(50%);
-}
+
 
 button3:hover {
   background-color: #92cfc2;
