--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,12 @@ body {
   margin: 3em auto;
   flex-direction: column;
   max-width: 350px;
+  max-height: 0px;
   border-radius: 6px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
   overflow: inherit;
   color: #000000;
+  padding-bottom: 600px;
 }
 #post{
   position: sticky;
