--- a/styles.css
+++ b/styles.css
@@ -27,13 +27,11 @@ body {
 #card {
   margin: 3em auto;
   flex-direction: column;
-  max-width: 350px;
-  max-height: 0px;
+  max-width: 281px;
   border-radius: 6px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.25);
   overflow: inherit;
   color: #000000;
-  padding-bottom: 600px;
 }
 #post{
   position: sticky;
@@ -46,51 +44,6 @@ model-viewer {
   height: 500px;
   --poster-color: #ffffff00;
 }
-.attributiontwo {
-height: 60px;
-}
-
-.attribution1 {
-  color: #000000;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  
-  align-content: center;
-  flex-wrap: wrap;
-  align-items: flex-end;
-  
-}
-
-.attribution {
-  color: #000000;
- 
-  flex-direction: column;
-  justify-content: space-evenly;
-  margin: 0em;
-  align-content: center;
-  flex-wrap: wrap;
-  align-items: center;
-  
-}
-
-.attribution h1 {
-  margin: 0 0 0.25em;
-  color: #000000;
-}
-
-.attribution img {
-  
-  height: 1em;
- 
-}
-
-.attribution .cc {
-  flex-shrink: .01;
-  text-decoration: none;
-  color: #000000;
-}
-
 
 
 .progress-bar {
@@ -127,21 +80,20 @@ height: 60px;
   background-repeat: no-repeat;
   background-size: 20px 20px;
   background-position: 12px 50%;
-  background-color: #efefef;
-  position: absolute;
-  left: 50%;
+  background-color: #ffffff87;
+  left: 30%;
   transform: translateX(-50%);
+  transform: translateY(-200%);
   white-space: nowrap;
   bottom: 16px;
   padding: 0px 16px 0px 40px;
-  font-family: Roboto Regular, Helvetica Neue, sans-serif;
-  font-size: 14px;
-  color:#636363;
+  font-family: FontFont_FF.Mark.Pro.otf;
+  font-size: 11px;
+  color:#000000;
   height: 36px;
   line-height: 36px;
   border-radius: 18px;
   border: 1px solid #DADCE0;
-  box-shadow: -.5px .5px 1px rgba(0, 0, 0, 1);
 }
 
 #ar-button:active {
@@ -351,9 +303,3 @@ button2.disabled {
 #textrst{
   display:none;
 }
-
-
-
-
-
-
